# cb-hft

./: Cargo.toml  README.md
config/: prod.toml.example  sandbox.toml.example
docs/: coinbase-hft-architecture.md  live-test-flow.md
src/: account.rs  app.rs  config.rs  cpu.rs  dashboard.rs  dashboard_feed.rs  event.rs  lib.rs  main.rs  maker.rs  market.rs  net.rs  order.rs  ring.rs  runtime.rs  strategy.rs  supervisor.rs  telemetry.rs  types.rs
src/fix/: encoder.rs  mod.rs  parser.rs  session.rs
src/fix/coinbase/: auth.rs  market_data.rs  mod.rs  order_entry.rs
tests/: account_app_net_tests.rs  coinbase_api_fixtures_tests.rs  coinbase_market_data_tests.rs  config_cpu_tests.rs  config_dashboard_tests.rs  dashboard_feed_tests.rs  default_dashboard_startup_tests.rs  exchange_event_ring_tests.rs  execution_report_tests.rs  fix_encoder_tests.rs  fix_order_encoder_tests.rs  fix_order_entry_flow_tests.rs  fix_parser_tests.rs  fix_session_tests.rs  live_coinbase_feature_tests.rs  maker_strategy_tests.rs  missing_credentials_startup_tests.rs  order_cancel_engine_tests.rs  order_manager_engine_tests.rs  ring_spsc_tests.rs  runtime_pipeline_tests.rs  strategy_market_engine_tests.rs  types_and_market_tests.rs
