[package]
name = "cb-hft"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
core_affinity = "0.8"
hmac = "0.13.0"
rtrb = "0.3"
native-tls = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
time = { version = "0.3", features = ["formatting", "macros"] }
toml = "0.8"
ureq = { version = "2", features = ["tls"] }

[dev-dependencies]
tempfile = "3"
